# cathook

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO  cathook-loader  code-style.md  fresh-start  install-all  install-data  install-navmesh  install-sound  install-tf2
.circleci/: config.yml
config_data/: spam.txt
data/menu/: menu.xml
data/menu/nullifiedcat/: antiaim.xml  chat.xml  hackinfo.xml  misc.xml  movement.xml  weapons.xml
data/menu/nullifiedcat/misc/: autoitem.xml  catbot.xml  collective.xml
data/menu/nullifiedcat/movement/: followbot.xml  general.xml  navbot.xml  walkbot.xml
data/menu/nullifiedcat/visuals/: chams.xml  esp.xml  ui.xml  world.xml
include/: entitycache.hpp  navparser.hpp  nullnexus.hpp
include/hacks/: Aimbot.hpp  AntiAntiAim.hpp
loader/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
scripts/: dependencycheck  migrations  updater
scripts/binarypackage/: install
src/: CMakeLists.txt  entitycache.cpp  navparser.cpp  nullnexus.cpp  targethelper.cpp  textmode.cpp  tfmm.cpp  votelogger.cpp
src/core/: logging.cpp
src/hacks/: Aimbot.cpp  AntiAim.cpp  AntiAntiAim.cpp  AutoItem.cpp  AutoJoin.cpp  CMakeLists.txt  CatBot.cpp  ESP.cpp  FollowBot.cpp  NavBot.cpp  Noisemaker.cpp  Thirdperson.cpp  Walkbot.cpp
src/hacks/ac/: antiaim.cpp  bhop.cpp
src/hooks/: DispatchUserMessage.cpp  GetFriendPersonaName.cpp  SendNetMsg.cpp
src/hooks/visual/: DrawModelExecute.cpp  PaintTraverse.cpp
src/visual/: drawmgr.cpp
src/visual/menu/: GuiInterface.cpp
(+5 files in other folders)
